--- a/public/lavadores-admin.html
+++ b/public/lavadores-admin.html
@@ -168,12 +168,12 @@ button.qr:hover {
   </table>
 
   <div class="qr-box" id="qrBox">
-  <h3 id="qrNombre"></h3>
-  <img id="qrImg">
-  <p class="qr-url" id="qrUrl"></p>
-  <br>
-  <button onclick="imprimirQR()">🖨️ Imprimir QR</button>
-</div>
+    <h3 id="qrNombre"></h3>
+    <img id="qrImg">
+    <p class="qr-url" id="qrUrl"></p>
+    <br>
+    <button onclick="imprimirQR()">🖨️ Imprimir QR</button>
+  </div>
 
   <div class="back">
     <button onclick="volver()">⬅ Volver</button>
@@ -182,7 +182,7 @@ button.qr:hover {
 </div>
 
 <script>
-// Seguridad
+// 🔐 Seguridad
 if (localStorage.getItem("rol") !== "admin") {
   window.location.href = "login.html";
 }
@@ -191,10 +191,13 @@ const tabla = document.getElementById("tabla");
 const qrBox = document.getElementById("qrBox");
 const qrImg = document.getElementById("qrImg");
 const qrUrl = document.getElementById("qrUrl");
+let qrActual = null;
 
+// 📋 Cargar lavadores
 function cargarLavadores() {
   tabla.innerHTML = "";
-  fetch("http://localhost:3000/lavadores")
+
+  fetch("/lavadores")
     .then(r => r.json())
     .then(data => {
       data.forEach(l => {
@@ -203,7 +206,9 @@ function cargarLavadores() {
           <td>${l.nombre}</td>
           <td>${l.turno.toUpperCase()}</td>
           <td>
-            <button class="qr" onclick="verQR(${l.id}, '${l.nombre}')">Generar QR</button>
+            <button class="qr" onclick="verQR(${l.id}, '${l.nombre}')">
+              Generar QR
+            </button>
           </td>
         `;
         tabla.appendChild(tr);
@@ -211,102 +216,86 @@ function cargarLavadores() {
     });
 }
 
+// ➕ Crear lavador
 function crearLavador(e) {
   e.preventDefault();
 
   const nombre = document.getElementById("nombre").value.trim();
   const turno = document.getElementById("turno").value;
 
-  fetch("http://localhost:3000/lavadores", {
+  fetch("/lavadores", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ nombre, turno })
   })
-  .then(r => r.json())
+  .then(r => {
+    if (!r.ok) throw new Error("Error creando lavador");
+    return r.json();
+  })
   .then(() => {
     document.getElementById("nombre").value = "";
     document.getElementById("turno").value = "";
     cargarLavadores();
     alert("Lavador creado correctamente");
-  });
+  })
+  .catch(err => alert(err.message));
 }
 
-function verQR(id) {
-  fetch(`http://localhost:3000/lavadores/${id}/qr`)
-    .then(r => r.json())
-    .then(data => {
-      qrImg.src = data.qr;
-      qrUrl.textContent = data.url;
-      qrBox.style.display = "block";
-      qrBox.scrollIntoView({ behavior: "smooth" });
-    });
-}
-
-function volver() {
-  window.location.href = "dashboard-admin.html";
-}
-
-// Inicial
-cargarLavadores();
-</script>
-<script>
-let qrActual = null;
-
+// 🔲 Generar QR (SIN localhost)
 function verQR(id, nombre) {
-  fetch(`http://localhost:3000/lavadores/${id}/qr`)
-    .then(r => r.json())
+  fetch(`/lavadores/${id}/qr`)
+    .then(r => {
+      if (!r.ok) throw new Error("Error generando QR");
+      return r.json();
+    })
     .then(data => {
-      qrActual = data;
-      qrActual.nombre = nombre; // 👈 guardamos el nombre
+      qrActual = { ...data, nombre };
 
       qrImg.src = data.qr;
       qrUrl.textContent = data.url;
-
-      document.getElementById("qrNombre").textContent =
-        "QR de: " + nombre;
+      document.getElementById("qrNombre").textContent = "QR de: " + nombre;
 
       qrBox.style.display = "block";
       qrBox.scrollIntoView({ behavior: "smooth" });
-    });
+    })
+    .catch(err => alert(err.message));
 }
 
+// 🖨️ Imprimir QR
 function imprimirQR() {
   if (!qrActual) {
     alert("No hay QR para imprimir");
     return;
   }
 
-  const ventana = window.open("", "_blank");
-
-  ventana.document.write(`
+  const v = window.open("", "_blank");
+  v.document.write(`
     <html>
     <head>
       <title>Imprimir QR</title>
       <style>
-        body {
-          font-family: Arial;
-          text-align: center;
-          margin-top: 40px;
-        }
-        img {
-          max-width: 300px;
-          margin: 20px 0;
-        }
+        body { font-family: Arial; text-align: center; margin-top: 40px; }
+        img { max-width: 300px; margin: 20px 0; }
       </style>
     </head>
     <body>
       <h2>${qrActual.nombre}</h2>
-<img src="${qrActual.qr}">
-<p>${qrActual.url}</p>
-      <script>
-        window.print();
-      <\/script>
+      <img src="${qrActual.qr}">
+      <p>${qrActual.url}</p>
+      <script>window.print();<\/script>
     </body>
     </html>
   `);
-
-  ventana.document.close();
+  v.document.close();
 }
+
+// ⬅ Volver
+function volver() {
+  window.location.href = "dashboard-admin.html";
+}
+
+// 🚀 Init
+cargarLavadores();
 </script>
 
 </body>
