--- a/public/historial-entregas.html
+++ b/public/historial-entregas.html
@@ -92,41 +92,21 @@ const rol = localStorage.getItem("rol");
 const tabla = document.getElementById("tabla");
 
 /* ==========================
-   CARGAR LAVADORES EN FILTRO
+   CARGAR LAVADORES FILTRO
 ========================== */
-function cargar() {
-  const desde = document.getElementById("desde").value;
-  const hasta = document.getElementById("hasta").value;
-  const lavador = document.getElementById("lavadorFiltro").value;
-
-  let url = "/reporte-entregas?";
-
-  if (desde) url += `desde=${desde}&`;
-  if (hasta) url += `hasta=${hasta}&`;
-  if (lavador) url += `lavador_id=${lavador}&`;
-
-  fetch(url)
-    .then(r => r.json())
+function cargarLavadoresFiltro() {
+  fetch("/lavadores")
+    .then(res => res.json())
     .then(data => {
-      tabla.innerHTML = "";
+      const sel = document.getElementById("lavadorFiltro");
+      sel.innerHTML = `<option value="">Todos</option>`;
 
-      if (!data.length) {
-        tabla.innerHTML = `<tr><td colspan="6">Sin registros</td></tr>`;
-        return;
-      }
-
-      data.forEach(e => {
-        tabla.innerHTML += `
-          <tr>
-            <td>${formatearFecha(e.fecha)}</td>
-            <td>${e.turno}</td>
-            <td>${e.lavador}</td>
-            <td>${e.producto}</td>
-            <td>${e.cantidad}</td>
-            <td>${e.observacion || ""}</td>
-          </tr>
-        `;
+      data.forEach(l => {
+        sel.innerHTML += `<option value="${l.id}">${l.nombre}</option>`;
       });
+    })
+    .catch(err => {
+      console.error("Error cargando lavadores:", err);
     });
 }
 
